tests/baselines/reference/esDecorators-emitDecoratorMetadata(target=es2022).errors.txt
error TS5052: Option 'emitDecoratorMetadata' cannot be specified without specifying option 'experimentalDecorators'.
esDecorators-emitDecoratorMetadata.ts(14,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
esDecorators-emitDecoratorMetadata.ts(36,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.


!!! error TS5052: Option 'emitDecoratorMetadata' cannot be specified without specifying option 'experimentalDecorators'.
==== esDecorators-emitDecoratorMetadata.ts (2 errors) ====
    declare let dec: any;
    
    @dec
    class C {
        constructor(x: number) {}
    
        @dec
        method(x: number) {}
    
        @dec
        set x(x: number) {}
    
        @dec
        y: number;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    
        @dec
        static method(x: number) {}
    
        @dec
        static set x(x: number) {}
    
        @dec
        static y: number;
    }
    
    (@dec class C {
        constructor(x: number) {}
    
        @dec
        method(x: number) {}
    
        @dec
        set x(x: number) {}
    
        @dec
        y: number;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    
        @dec
        static method(x: number) {}
    
        @dec
        static set x(x: number) {}
    
        @dec
        static y: number;
    });